# agents2

./: AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PowerShell_Profile_New.ps1  README.md  SECURITY.md  SUPPORT.md  build-production-ai-agents-reg-page.md  tmp_fix_chatgpt_research.py
oreilly-agent-mvp/: .env.example  .gitignore  .mcp.json  CLAUDE.md  DEBUGGING.md  DEBUGGING_QUICKREF.md  DEBUGGING_SIMPLE.md  MCP_IMPLEMENTATION_SUMMARY.md  MCP_INSPECTOR_GUIDE.md  MCP_SETUP.md  README.md  TOKEN_TRACKING.md  TOKEN_TRACKING_SUMMARY.md  inspector.ps1  launch.ps1  mcp.ps1  pyproject.toml  test_connectivity.py
oreilly-agent-mvp/.claude/: settings.local.json
oreilly-agent-mvp/.claude/agents/: web-appsec-auditor.md
oreilly-agent-mvp/.mcp/: claude_desktop_config.json
oreilly-agent-mvp/data/: pipeline.db
oreilly-agent-mvp/incoming/: .gitkeep
oreilly-agent-mvp/mock_issues/: EXAMPLE_OUTPUT_WITH_TOKENS.json  issue_001.json  issue_002.json  issue_003.json  issue_004.json  issue_005.json  issue_006.json
oreilly-agent-mvp/outgoing/: .gitkeep
oreilly-agent-mvp/processed/: .gitkeep
oreilly-agent-mvp/scripts/: run_mcp.ps1  run_mcp.sh  run_mcp_inspector.ps1  run_mcp_inspector.sh  run_menu.ps1  run_menu.sh  run_once.ps1  run_once.sh  run_watcher.ps1  run_watcher.sh  setup.ps1  setup.sh
oreilly-agent-mvp/src/agent_mvp/: __init__.py  config.py  logging_setup.py  models.py
oreilly-agent-mvp/src/agent_mvp/cli/: __init__.py  (+1 more)
oreilly-agent-mvp/tests/: test_fs_moves.py  test_mcp_server.py  test_schema.py  test_token_tracking.py
oreilly-agent-mvp/workspace/: create_pptx.js
(+79 files in other folders)
